k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-deployment
spec: 
  replicas: 3
  selector:
    matchLabels:
      component: web
      # The component of the application that this Deployment will be managing will be the web/frontend side of things
  
  template:
    metadata: 
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: xholyspirit/multi-client
          ports:
            - containerPort: 3000
