k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec: 
  replicas: 3
  selector: 
  # Specify the selector that the Deployment is going to use, to find these sets of Pods that it is going to control 
    matchLabels:
      component: server
    # We want to say that it should match a set of labels
  template:
    metadata:
      labels:
        component: server
    spec: 
    # The spec that is going to customize the exact behaviour of each of the Pods that get created.
      containers:
        - name: server
          image: xholyspirit/multi-server
          ports:
            - containerPort: 5000
