k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: xholyspirit/multi-worker
          # Nothing inside the worker image needs to be accessed by other objects inside the cluster.
          # Hence, the multi-worker does not need any ports assigned to it, and no Service is needed 
          # to attach to it either.
